Store  mockup data with mongodb and mongoose

--- a/FRONT/VIEWS/main.html
+++ b/FRONT/VIEWS/main.html
@@ -137,7 +137,7 @@
                 
                                 <audio id="audio">
                                     <!-- will be replaced data from DB -->
-                                    <source src="http://www.lukeduncan.me/oslo.mp3" type="audio/mp3">
+                                    <source src="MEDIA/bensound-tomorrow.mp3" type="audio/mp3">
                                 </audio>
                 
                                 <div class="audio-player__controls">
@@ -148,7 +148,7 @@
                             </div>
                             
                             <div class="audio-player__column">
-                                <img src="https://artwork-cdn.7static.com/static/img/sleeveart/00/051/614/0005161476_350.jpg" alt="" class="audio-player__album-cover">
+                                <img src="MEDIA/tomorrow.jpg" alt="" class="audio-player__album-cover">
                                 <div class="audio-player__info">
                                     <span class="audio-player__info--artist">lorem</span>
                                     <!-- artistDetail url will be taken :id(artist.id) -->
