--- a/FRONT/ASSETS/SASS/carousel.scss
+++ b/FRONT/ASSETS/SASS/carousel.scss
@@ -2,7 +2,7 @@
 
     #carousel__container {
         position: relative;
-        width: 70%;
+        width: 80%;
         margin: 0 auto;
         height: auto;
         overflow: hidden; 
@@ -13,11 +13,16 @@
             flex-direction: row;
             margin: 0 auto;
             position: relative;
-            transition: all 0.4s ease-in-out;
-
+            transition: all 0.5s cubic-bezier(0.47, 0, 0.745, 0.715);
         
             .carousel__element{
+                // float: left;
                 margin-right: 2rem;
+                
+                img {
+                    width: 10rem;
+                    height: 10rem;
+                }
             }
         }
         
