--- a/FRONT/ASSETS/CSS/style.css
+++ b/FRONT/ASSETS/CSS/style.css
@@ -1,33 +1,104 @@
-#carousel__container {
-  position: relative;
-  width: 80%;
-  margin: 0 auto;
-  height: auto;
-  overflow: hidden;
-  transform: translateX(0) translateY(10vh); }
-  #carousel__container #carousel__wrapper {
-    display: flex;
-    flex-direction: row;
-    margin: 0 auto;
-    position: relative;
-    transition: all 0.5s cubic-bezier(0.47, 0, 0.745, 0.715); }
-    #carousel__container #carousel__wrapper .carousel__element {
-      margin-right: 2rem; }
-      #carousel__container #carousel__wrapper .carousel__element img {
-        width: 10rem;
-        height: 10rem; }
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  box-sizing: border-box;
+  vertical-align: baseline; }
 
-.carousel__btn {
-  position: absolute;
-  font-size: 5rem;
-  z-index: 1; }
-  .carousel__btn--back {
-    top: 50%;
-    left: 13%; }
-  .carousel__btn--next {
-    top: 50%;
-    right: 13%; }
-lay: block; }
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block; }
 
 body {
   line-height: 1; }
@@ -59,10 +130,10 @@ a {
 input {
   box-sizing: inherit; }
 
-input {
+input, button {
   border: none;
   box-sizing: inherit; }
-  input:focus, input:active {
+  input:focus, input:active, button:focus, button:active {
     outline: none; }
 
 body {
@@ -240,6 +311,180 @@ main {
   .carousel__btn--next {
     top: 50%;
     right: 13%; }
+
+.home-header {
+  display: block;
+  position: relative;
+  width: 80rem;
+  height: 30rem;
+  margin: 0 auto;
+  background-blend-mode: soft-light;
+  background-image: linear-gradient(to right bottom, #f65368, #a1bffd), url("../../MEDIA/adult-architecture-bandana-1371177.jpg");
+  background-size: cover;
+  background-repeat: no-repeat; }
+  .home-header .header__logo {
+    margin: .5rem 0 0 1.5rem;
+    display: inline-block;
+    position: relative;
+    color: white; }
+    .home-header .header__logo .logo--img {
+      transform: translateY(15%);
+      font-size: 2rem; }
+    .home-header .header__logo .logo--title {
+      margin-left: .7rem;
+      font-weight: 550;
+      font-size: 1.2rem; }
+  .home-header .header__content {
+    position: relative;
+    top: 30%;
+    color: white; }
+    .home-header .header__content--title {
+      display: flex;
+      justify-content: center;
+      font-size: 2.5rem;
+      font-weight: 300; }
+    .home-header .header__content--description {
+      margin-top: 2rem;
+      display: flex;
+      justify-content: center;
+      font-size: 1.3rem;
+      font-weight: 500;
+      display: block;
+      text-align: center; }
+      .home-header .header__content--description p {
+        margin-top: 0.5rem; }
+  .home-header .header__signUpBtn {
+    position: absolute;
+    z-index: 1;
+    top: 21rem;
+    left: 42%;
+    width: 12rem;
+    height: 3rem;
+    background: #f65368;
+    border: none;
+    border-radius: 1.3rem;
+    color: white;
+    font-size: 1rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+    cursor: pointer; }
+  .home-header .header__line {
+    position: absolute;
+    top: 0;
+    background: #f65368;
+    width: 100%;
+    height: .3rem; }
+
+.modal {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center; }
+  .modal .modal__container {
+    z-index: 3;
+    transition: .5s ease-in-out;
+    opacity: 0;
+    margin: 0 auto;
+    position: relative;
+    top: 0;
+    width: 25rem;
+    height: 40rem;
+    background: #4d4d4d;
+    border-radius: .3rem; }
+    .modal .modal__container .modal__header {
+      z-index: 6;
+      position: relative;
+      width: 100%; }
+      .modal .modal__container .modal__header .modal__header--closeBtn {
+        position: absolute;
+        top: -2rem;
+        right: 0;
+        font-size: 2rem;
+        color: #4d4d4d;
+        transition: transform 0.2s cubic-bezier(0.215, 0.61, 0.355, 1); }
+        .modal .modal__container .modal__header .modal__header--closeBtn:hover {
+          transform: rotate(90deg); }
+      .modal .modal__container .modal__header li {
+        position: relative;
+        float: left;
+        text-align: center;
+        width: 50%;
+        height: 50px;
+        font-size: 1rem;
+        font-weight: bolder;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #f65368;
+        cursor: pointer; }
+        .modal .modal__container .modal__header li a {
+          z-index: 10;
+          color: #4d4d4d;
+          font-weight: 600;
+          font-size: 1.3rem;
+          display: block;
+          position: relative; }
+      .modal .modal__container .modal__header .in-active {
+        border-radius: .3rem 0 0 0;
+        background: #4d4d4d; }
+        .modal .modal__container .modal__header .in-active a {
+          color: #f65368; }
+      .modal .modal__container .modal__header .up-active {
+        border-radius: 0 .3rem 0 0;
+        background: #4d4d4d; }
+        .modal .modal__container .modal__header .up-active a {
+          color: #f65368; }
+    .modal .modal__container .modal__content {
+      position: relative;
+      width: 100%;
+      height: 100%; }
+      .modal .modal__container .modal__content form {
+        text-align: center;
+        position: absolute;
+        top: 13%;
+        left: 10%; }
+        .modal .modal__container .modal__content form * {
+          display: block; }
+        .modal .modal__container .modal__content form input,
+        .modal .modal__container .modal__content form .social-login {
+          padding: .5rem;
+          color: #4d4d4d;
+          font-size: 1.1rem;
+          margin: 0 auto;
+          width: 20rem;
+          height: 3rem;
+          background: #e6e6e6; }
+        .modal .modal__container .modal__content form #submit,
+        .modal .modal__container .modal__content form .social-login {
+          background: #f65368;
+          margin-top: 20px;
+          font-weight: 600; }
+        .modal .modal__container .modal__content form .social-login {
+          background: #191919; }
+      .modal .modal__container .modal__content #modal-sign-up {
+        visibility: hidden; }
+      .modal .modal__container .modal__content label {
+        font-weight: 600;
+        font-size: 1.3rem;
+        color: #FB5781;
+        margin-bottom: 1rem; }
+        .modal .modal__container .modal__content label:not(:first-child) {
+          margin-top: 1rem; }
+  .modal .open {
+    opacity: 1;
+    top: 5rem; }
+  .modal .close {
+    opacity: 0;
+    top: 0; }
+
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 
 .user__container {
   background: white;
