auto complete search bar

--- a/FRONT/ASSETS/CSS/style.css
+++ b/FRONT/ASSETS/CSS/style.css
@@ -155,55 +155,85 @@ main {
   top: 3rem;
   margin: 0 auto; }
 
-.header__wrapper {
+.header {
   width: 100%;
   height: 3rem;
-  position: fixed;
-  margin-bottom: 5rem;
-  background-color: #333333;
-  margin: 0 auto;
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr); }
-  .header__wrapper .header__column {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center; }
-    .header__wrapper .header__column:first-child {
-      margin-left: 10rem;
-      background-color: #1C5542;
-      left: 10rem;
-      width: 12.5rem; }
-      .header__wrapper .header__column:first-child i {
-        color: white;
-        font-size: 3rem; }
-      .header__wrapper .header__column:first-child p {
-        margin-left: 0.5rem;
-        display: block;
-        font-size: 1rem;
-        color: white; }
-    .header__wrapper .header__column:nth-child(2) {
-      width: 100%;
-      justify-self: center; }
-      .header__wrapper .header__column:nth-child(2) form input {
+  background: #333333; }
+  .header__wrapper {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); }
+    .header__wrapper .header__column {
+      margin: 0 auto;
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .header__wrapper .header__column:first-child {
+        width: 40rem;
         display: flex;
-        padding: 0.3rem;
-        width: 33rem;
-        align-self: center;
-        border-radius: .2rem; }
-    .header__wrapper .header__column:last-child {
-      right: 0;
-      justify-self: center; }
-      .header__wrapper .header__column:last-child li {
-        float: left;
-        display: block;
-        margin-right: 2rem;
-        margin-left: 1rem; }
-        .header__wrapper .header__column:last-child li a {
-          font-size: 1rem;
-          display: block;
+        align-items: center;
+        position: relative; }
+        .header__wrapper .header__column:first-child .logo__container {
+          position: relative;
+          right: 10%;
+          width: 12rem;
+          height: 100%;
+          background: #f65368;
           color: white; }
+          .header__wrapper .header__column:first-child .logo__container i {
+            position: relative;
+            top: 25%;
+            left: 12%;
+            display: block;
+            float: left;
+            font-size: 1.3rem; }
+          .header__wrapper .header__column:first-child .logo__container p {
+            position: relative;
+            top: 30%;
+            left: 19%;
+            font-weight: bold; }
+      .header__wrapper .header__column:nth-child(2) {
+        width: 100%; }
+        .header__wrapper .header__column:nth-child(2) input {
+          width: 30rem;
+          height: 2rem;
+          padding-left: 1rem;
+          border-radius: .3rem; }
+      .header__wrapper .header__column:nth-child(3) {
+        width: 15rem; }
+        .header__wrapper .header__column:nth-child(3) li {
+          color: white;
+          display: block;
+          float: left; }
+          .header__wrapper .header__column:nth-child(3) li:first-child {
+            margin-right: 1.3rem; }
+          .header__wrapper .header__column:nth-child(3) li:last-child {
+            margin-left: 1rem; }
+
+.search-result {
+  z-index: 5;
+  background: #333333;
+  width: 30rem;
+  position: absolute;
+  top: 3rem; }
+  .search-result li {
+    color: white;
+    width: 100%;
+    height: 2rem;
+    cursor: pointer;
+    position: relative; }
+    .search-result li a {
+      margin-left: 1rem;
+      position: relative;
+      top: .5rem;
+      display: block;
+      font-weight: 200;
+      font-size: .8rem; }
+      .search-result li a i {
+        margin-right: .7rem; }
+    .search-result li:hover {
+      background: #666666; }
 
 .audio-player {
   position: fixed;
