--- a/views/layout/base.pug
+++ b/views/layout/base.pug
@@ -9,6 +9,7 @@ html
             include ./header
             block content
             include ./footer
+        script(type="text/javascript", src="ASSETS/JS/searchBar.js")
         script(type="text/javascript", src="ASSETS/JS/audioPlayer.js")
         script(type="text/javascript", src="ASSETS/JS/carousel.js")
         script(type="text/javascript", src="ASSETS/JS/realTime.js")
