--- a/FRONT/ASSETS/SASS/main.scss
+++ b/FRONT/ASSETS/SASS/main.scss
@@ -3,6 +3,8 @@
 @import "header.scss";
 @import "footer.scss";
 @import "carousel.scss";
+@import "searchResult.scss";
+@import "artist.scss";
 @import "home.scss";
 @import "animation.scss";
 
