--- a/FRONT/ASSETS/SASS/header.scss
+++ b/FRONT/ASSETS/SASS/header.scss
@@ -73,21 +73,26 @@
     width: 100%;
     height: 3rem;
     background: #333333;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &__wrapper {
-        width: 100%;
+
+        width: 75%;
         height: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
 
         .header__column {
-            margin: 0 auto;
+            // margin: 0 auto;
             display: flex;
             align-items: center;
-            justify-content: center;
+            // justify-content: center;
 
             &:first-child {
-                width: 40rem;
+                position: relative;
+                left: 0;
                 display: flex;
                 align-items: center;
                 position: relative;
@@ -95,7 +100,6 @@
                 .logo__container{
 
                     position: relative;
-                    right: 10%;
                     width: 12rem;
                     height: 100%;
                     background: #f65368;
@@ -124,7 +128,7 @@
                 width: 100%;
 
                 input {
-                    width: 30rem;
+                    width: 25rem;
                     height: 2rem;
                     padding-left: 1rem;
                     border-radius: .3rem;
@@ -132,33 +136,32 @@
             }
 
             &:nth-child(3){
+                position: relative;
+                right: 0;
                 width: 15rem;
+                display: flex;
+                
+                ul{
+                    position: relative;
+                    left: 10%;
+
 
                     li{
                         color: white;
                         display: block;
                         float: left;
                         
-                        // &::after {
-                        //     display: inline-block;
-                        //     z-index: 1;
-                        //     content: "";
-                        //     width: 2px;
-                        //     color: #333333;
-                        //     position: absolute;
-                        //     top: 2.5rem;
-                        //     left: 2rem;
-                        //     border-bottom: .05rem solid lighten( #333333, 60% );
-                        // }
-
+        
                         &:first-child {
                             margin-right: 1.3rem;
-
+    
                         }
                         &:last-child{
                             margin-left: 1rem;
                         }
                     }
+                }
+
                 
             }
         }
