--- a/FRONT/ASSETS/SASS/header.scss
+++ b/FRONT/ASSETS/SASS/header.scss
@@ -105,27 +105,37 @@
                     background: #f65368;
                     color: white;
 
-                    i {
-                        position: relative;
-                        top: 25%;
-                        left: 12%;
+                    a {
                         display: block;
-                        float: left;
-                        font-size: 1.3rem;
-                    }
-                    p {
                         position: relative;
-                        top: 30%;
-                        left: 19%;
-                        font-weight: bold;
-                        
+                        width: 100%;
+                        height: 100%;
+
+                        i {
+                            position: relative;
+                            top: 30%;
+                            left: 12%;
+                            display: block;
+                            float: left;
+                            font-size: 1.3rem;
+                        }
+                        p {
+                            position: relative;
+                            top: 30%;
+                            left: 19%;
+                            font-weight: bold;
+                            
+                        }
                     }
+
                 }
               
             }
 
             &:nth-child(2) {
                 width: 100%;
+                display: flex;
+                justify-content: center;
 
                 input {
                     width: 25rem;
@@ -138,12 +148,13 @@
             &:nth-child(3){
                 position: relative;
                 right: 0;
-                width: 15rem;
+                width: 100%;
                 display: flex;
+                justify-content: end;
                 
                 ul{
                     position: relative;
-                    left: 10%;
+                    left: 60%;
 
 
                     li{
